# kingdom-click

./: Cargo.toml  README.md  index.html
res/: index.scss  pubspec.yaml
src/: game.rs  gui.rs  guiboiler.rs  kingdom.rs  level.rs  main.rs
src/game/: kingdom.rs  mod.rs  resource.rs  task.rs
src/gui/: boilerplate.rs  mod.rs
src/reference/: physics.rs
